--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 bevy = "0.11.2"
+seldom_pixel = "0.4.0"
 wasm-bindgen = "0.2.87"
 web-sys = { version = "0.3.64", features = ["Window", "Document", "Element"] }
 
