--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ repository = "https://github.com/TuntematonSotilas/island_explore"
 crate-type = ["cdylib"]
 
 [dependencies]
-bevy = "0.11.2"
-seldom_pixel = "0.4.0"
+bevy = { version = "0.11.2", features = [ "png" ] }
+seldom_pixel = { version = "0.4.0", features = ["map"] }
+bevy_ecs_tilemap = { version = "0.11", default-features = false }
 wasm-bindgen = "0.2.87"
 web-sys = { version = "0.3.64", features = ["Window", "Document", "Element"] }
 
