--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/TuntematonSotilas/island_explore"
 crate-type = ["cdylib"]
 
 [dependencies]
-bevy = { version = "0.11.2", features = [ "png" ] }
+bevy = { version = "0.11.2" }
 seldom_pixel = { version = "0.4.0", features = ["map"] }
 bevy_ecs_tilemap = { version = "0.11", default-features = false }
 wasm-bindgen = "0.2.87"
