--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,14 @@ repository = "https://github.com/TuntematonSotilas/island_explore"
 crate-type = ["cdylib"]
 
 [dependencies]
-bevy = { version = "0.11.2" }
-seldom_pixel = { version = "0.4.0", features = ["map"] }
-bevy_ecs_tilemap = { version = "0.11", default-features = false }
-wasm-bindgen = "0.2.87"
-web-sys = { version = "0.3.64", features = ["Window", "Document", "Element"] }
+bevy = { version = "0.12.1", features = ["png"] }
+seldom_pixel = { version = "0.5.0", features = ["map"] }
+bevy_ecs_tilemap = { version = "0.12", default-features = false }
+wasm-bindgen = "0.2.91"
+web-sys = { version = "0.3.68", features = ["Window", "Document", "Element"] }
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3.34"
+wasm-bindgen-test = "0.3.41"
 
 [profile.release]
 lto = true
