--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["cdylib"]
 bevy = { version = "0.12.1", features = ["png"] }
 seldom_pixel = { version = "0.5.0", features = ["map"] }
 bevy_ecs_tilemap = { version = "0.12", default-features = false }
+bevy_wasm_window_resize = "0.2.0"
 wasm-bindgen = "0.2.91"
 web-sys = { version = "0.3.68", features = ["Window", "Document", "Element"] }
 
