--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ seldom_pixel = { version = "0.5.0", features = ["map"] }
 bevy_ecs_tilemap = { version = "0.12", default-features = false }
 wasm-bindgen = "0.2.91"
 web-sys = { version = "0.3.68", features = ["Window", "Document", "Element"] }
+rand = "0.8.5"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.41"
