--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ repository = "https://github.com/TuntematonSotilas/island_explore"
 crate-type = ["cdylib"]
 
 [dependencies]
-bevy = { version = "0.12.1", features = ["png"] }
-seldom_pixel = { version = "0.5.0", features = ["map"] }
-bevy_ecs_tilemap = { version = "0.12", default-features = false }
-wasm-bindgen = "0.2.91"
-web-sys = { version = "0.3.68", features = ["Window", "Document", "Element"] }
+bevy = { version = "0.13.2", features = ["png"] }
+seldom_pixel = { version = "0.6.0" }
+seldom_map_nav = "0.6.0"
+wasm-bindgen = "0.2.92"
+web-sys = { version = "0.3.69", features = ["Window", "Document", "Element"] }
 rand = "0.8.5"
 
 [dev-dependencies]
